added items endpoints and other fix + ci
