# internal/route/route.go
@@ -10,6 +10,20 @@ import (
 // It wires handlers with the necessary repositories and promotions.
 func SetRoutes(srv *utils.AppServer, itemRepo repo.IItemRepository, cartRepo repo.ICartRepository, promotions []promotion.Promotion) error {
 
+	// Items endpoints
+	if err := srv.AddRoute("/items", "POST", postItem(srv, itemRepo)); err != nil {
+		return err
+	}
+	if err := srv.AddRoute("/items/{sku}", "PUT", putItem(srv, itemRepo)); err != nil {
+		return err
+	}
+	if err := srv.AddRoute("/items/{sku}/price", "PUT", putItemPrice(srv, itemRepo)); err != nil {
+		return err
+	}
+	if err := srv.AddRoute("/items/{sku}", "GET", getItem(srv, itemRepo)); err != nil {
+		return err
+	}
+
 	if err := srv.AddRoute("/cart", "POST", postCart(srv, cartRepo)); err != nil {
 		return err
 	}
